Fix letter spacing on dropdown heroes

--- a/styles/_top-nav.scss
+++ b/styles/_top-nav.scss
@@ -80,6 +80,8 @@
           flex-grow: 0;
           padding: .75rem;
           margin-right: 2rem;
+          margin-top: auto;
+          margin-bottom: auto;
         }
 
         p {
@@ -91,6 +93,9 @@
 
         h4 {
           font-size: 1.25rem;
+          font-weight: 600;
+          margin-bottom: 0;
+          line-height: 2rem;
         }
 
         &:hover {
